--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@
   box-shadow:0 0 50px black;
 }
 
+a {
+  text-decoration: none;
+}
 
 body {
     font: 400 15px/1.8 Montserrat, sans-serif;
@@ -50,14 +53,14 @@ footer a:hover {
 
 .top {
   margin-top: 4em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 
 .container {
   background: #f2f2f2;
   padding: 0 40px;
-  padding-bottom: 4em;
+  padding-bottom: 2em;
   margin-bottom: 4em;
 }
 
@@ -69,7 +72,7 @@ footer a:hover {
 
 
 
-/* Add a dark background color with a little bit see-through */ 
+/* Add a dark background color with a little bit see-through */
 .navbar {
     background-color: white;
     border: 0;
@@ -87,18 +90,13 @@ footer a:hover {
 }
 
 /* Add a gray color to all navbar links */
-.navbar li a, .navbar .navbar-brand { 
+.navbar li a, .navbar .navbar-brand {
     color: black !important;
 }
 
 /* On hover, the links will turn white */
 .navbar-nav li a:hover {
   font-size: 30px;
-}
-
-/* The active link */
-.navbar-nav li.active a {
-  background-color: white !important;
 }
 
 /* Remove border color from the collapsible button */
